# deposito_diomedi

./: .gitattributes  .gitignore  DOCUMENTATION.md  README.md  aeronautica_guida.md  application documentation.md  crewai_steps.md  model documentation.md
11-09/: esercizio_2.ipynb
ethic_reviewer/: README.md  crewai_flow.html  pyproject.toml
ethic_reviewer/src/ethic_reviewer/: main.py
ethic_reviewer/src/ethic_reviewer/crews/answer_crew/: answer_crew.py
ethic_reviewer/src/ethic_reviewer/crews/answer_crew/config/: agents.yaml  tasks.yaml
ethic_reviewer/src/ethic_reviewer/crews/ethic_crew/: ethic_crew.py
ethic_reviewer/src/ethic_reviewer/crews/ethic_crew/config/: agents.yaml  tasks.yaml
rag_flow/: architettura_crewai.md  crewai_flow.html  pyproject.toml
rag_flow/docs/source/: conf.py  index.rst  modules.rst  rag_flow.crews.bias_crew.rst  rag_flow.crews.doc_crew.rst  rag_flow.crews.poem_crew.rst  rag_flow.crews.rst  rag_flow.crews.web_crew.rst  rag_flow.rst  rag_flow.tools.rag_w_qdrant.rst  rag_flow.tools.refactored_faiss_code.rst  rag_flow.tools.rst
rag_flow/eu_ai_act_docs/: application_documentation.md  data documentation.md  model documentation.md
rag_flow/faiss_db/parla/: index.faiss  index.pkl
rag_flow/output/: rag_eval_results.json  redacted_document.md
rag_flow/src/rag_flow/: main.py  requirements.txt
rag_flow/src/rag_flow/crews/bias_crew/: bias_crew.py
rag_flow/src/rag_flow/crews/bias_crew/config/: agents.yaml  tasks.yaml
rag_flow/src/rag_flow/crews/doc_crew/: doc_crew.py
rag_flow/src/rag_flow/crews/doc_crew/config/: agents.yaml  tasks.yaml
rag_flow/src/rag_flow/crews/poem_crew/: rag_crew.py
rag_flow/src/rag_flow/crews/poem_crew/config/: agents.yaml  tasks.yaml
rag_flow/src/rag_flow/crews/web_crew/: web_crew.py
rag_flow/src/rag_flow/crews/web_crew/config/: agents.yaml  tasks.yaml
rag_flow/src/rag_flow/tools/: custom_tool.py
rag_flow/src/rag_flow/tools/rag_w_qdrant/: azure_connections.py  config.py  ddgs_scripts.py  faiss_code.py  main.py  qdrant_script.py  rag_structure.py  ragas_scripts.py  streamlit_app.py  utils.py
rag_flow/src/rag_flow/tools/refactored_faiss_code/: azure_connections.py  ddgs_scripts.py  main.py  rag_structure.py  ragas_scripts.py  streamlit_app.py  utils.py
research_crew_azure/: README.md  pyproject.toml  report.md  summary.txt
research_crew_azure/src/research_crew_azure/: crew.py  main.py
research_crew_azure/src/research_crew_azure/config/: agents.yaml  tasks.yaml
research_outline_flow/: README.md  pyproject.toml
research_outline_flow/output/: outline_list.txt  report.md
research_outline_flow/src/research_outline_flow/: main.py
research_outline_flow/src/research_outline_flow/crews/analyst_crew/: analyst_crew.py
research_outline_flow/src/research_outline_flow/crews/analyst_crew/config/: agents.yaml  tasks.yaml
research_outline_flow/src/research_outline_flow/crews/ethical_crew/: ethical_crew.py
research_outline_flow/src/research_outline_flow/crews/math_crew/: math_crew.py
research_outline_flow/src/research_outline_flow/crews/outline_crew/: outline_crew.py
research_outline_flow/src/research_outline_flow/crews/research_crew/: research_crew.py
research_outline_flow/src/research_outline_flow/tools/: custom_tool.py  custom_tools.py
research_outline_flow/tools/: custom_tools.py
sum_flow/: README.md  pyproject.toml
sum_flow/src/sum_flow/: main.py
sum_flow/src/sum_flow/crews/poem_crew/: poem_crew.py
sum_flow/src/sum_flow/tools/: custom_tool.py
(+61 files in other folders)
