[project]
name = "ethic_reviewer"
version = "0.1.0"
description = "ethic_reviewer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0",
]

[project.scripts]
kickoff = "ethic_reviewer.main:kickoff"
run_crew = "ethic_reviewer.main:kickoff"
plot = "ethic_reviewer.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
