[project]
name = "research_crew_azure"
version = "0.1.0"
description = "research_crew_azure using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0",
]

[project.scripts]
research_crew_azure = "research_crew_azure.main:run"
run_crew = "research_crew_azure.main:run"
train = "research_crew_azure.main:train"
replay = "research_crew_azure.main:replay"
test = "research_crew_azure.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
