[project]
name = "sum_flow"
version = "0.1.0"
description = "sum_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0",
]

[project.scripts]
kickoff = "sum_flow.main:kickoff"
run_crew = "sum_flow.main:kickoff"
plot = "sum_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
